fix buttons, testing higher contrast in header

--- a/css/globalStyles.css
+++ b/css/globalStyles.css
@@ -12,6 +12,15 @@ body{
     font-size: xx-large;
     font-weight: bolder;
 }
+.navbarStyles{
+    justify-content: end;
+}
+.navbarStyles ul{
+    float: right !important;
+}
+.navbarStyles a{
+    font-weight: bolder;
+}
 .footerStyles{
     background-color: #dc3545;
 }
